--- a/massage/onepage.html
+++ b/massage/onepage.html
@@ -196,15 +196,24 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h3 class="h4">Обо мне</h3>
                         <div class="spacer-15"></div>
-                        <p class="lead">Integer tincidunt Cras dapibus. <a class="tipped" data-title="Sample Text" data-tipper-options='{"direction":"top"}'><b>Vivamus elementum</b></a> ultricies nisi vel augue. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante dapibus.</p>
+                        <p class="lead">Лучший массаж у вас дома. <a class="tipped" data-title="Sample Text" data-tipper-options='{"direction":"top"}'><b>Vivamus elementum</b></a> ultricies nisi vel augue. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante dapibus.</p>
                     </div>
                 </div>
                 <div class="row mt-80">
                     <div class="col-md-7 mb-30">
-                        <h4>WE`RE CREATIVE.</h4>
+                        <h4>Александр Жерновой</h4>
                         <div class="spacer-15"></div>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi.</p>
-                        <p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur?</p>
+                        <p> Массаж, для меня - это не просто способ расслабить или размять мышцы, а возможность снять боль, восстановить ослабленный организм, придать тонус коже и мышцам.
+                            Это последовательная, скурпулезная и ответственная работа с телом человека как с одним целым.</p>
+                        <p> Я -  профессиональный спортсмен, мастер спорта по дзюдо, чемпион кубка Европы и призёр России, после окончания спортивной карьеры посвятил себя массажу. </p>
+                        <p> Опыта набирался еще у своей бабушки, проводя большую часть своего детства в её кабинете и наблюдая за движением её рук. Любовь к работе и желание помогать людям я впитал именно от нее.
+                            Один случай потряс меня и определил мою судьбу. В кабинет зашёл согнутый пополам старик, а вышел здоровый мужчина с прямой спиной. Сейчас-то я знаю, что такое приступ ревматизма
+                            и как его снять, но тогда это выглядело как чудо.  Из года в год в санаторий приезжали люди из разных городов, чтобы попасть на массаж к моей бабушке. </p>
+                        <p> Сейчас ко мне обращаются люди с разными вопросами: кто-то хочет похудеть, кто-то снять спазм или боль, выровнять спину и укрепить мышцы, а кто-то просто хочет
+                            дать своему телу отдых и легкий расслабляющий массаж как нельзя больше для этого подходит. </p>
+                        <p>
+                            Я владею различными техниками массажа, в том числе классического и лечебного, техниками по уходу за телом и лицом, СПА процедур и кинезиологии.
+                            Я предлагаю услуги на дому в любое удобное для вас время. Предварительная запись по телефону.</p>
                     </div>
                     <div class="col-md-4 mb-30">
                         <img src="img/full/81.jpg" alt="" />
@@ -585,18 +594,18 @@
 
                                                     <!-- Welcome Content -->
                                                     <div class="col-md-8 mb-30">
-                                                        <p class="lead">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur?</p>
-                                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quas.</p>
+                                                        <p class="lead">Классический, расслабляющий массаж. Благодаря комбинации классических приемов, этот массаж снимает болевые ощущения и мышечное напряжение.
+                                                            Процедура улучшает кровообращение и микроциркуляцию, а натуральные масла выводят токсины.</p>
                                                     </div>
                                                     <!-- End Welcome Content -->
                                                     <div class="col-md-4 mb-30">
                                                         <div class="project-detail-block">
 
                                                             <p>
-                                                                <strong class="dark-color">Длительность :</strong>40/50/60 мин.
+                                                                <strong class="dark-color">Длительность :</strong>30/60/90 мин
                                                             </p>
                                                             <p>
-                                                                <strong class="dark-color">Стоимость :</strong>700/800/900 руб.
+                                                                <strong class="dark-color">Стоимость :</strong>700/800/900 руб
                                                             </p>
                                                         </div>
                                                     </div>
@@ -606,7 +615,7 @@
                                 </div>
                             </div>
                             <div class="accordion-section">
-                                <h6 class="accordion-title">Массаж спины</h6>
+                                <h6 class="accordion-title">Интенсивный массаж</h6>
                                 <div class="accordion-content">
 
 
@@ -675,18 +684,19 @@
 
                                     <!-- Welcome Content -->
                                     <div class="col-md-8 mb-30">
-                                        <p class="lead">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur?</p>
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quas.</p>
+                                        <p class="lead">Данная техника массажа позволяет проработать глубокие слои мышц и связки. Благодаря комбинации плавных и бережных массажных движений,
+                                            массаж восстанавливает подвижность суставов, ослабляет напряжение в мышцах, снимает боль, способствует микроциркуляции.
+                                            Он является лучшим способом снять напряжение и усталось.</p>
                                     </div>
                                     <!-- End Welcome Content -->
                                     <div class="col-md-4 mb-30">
                                         <div class="project-detail-block">
 
                                             <p>
-                                                <strong class="dark-color">Длительность :</strong>40/50/60 мин.
+                                                <strong class="dark-color">Длительность :</strong>60/90 мин
                                             </p>
                                             <p>
-                                                <strong class="dark-color">Стоимость :</strong>700/800/900 руб.
+                                                <strong class="dark-color">Стоимость :</strong>700/800/900 руб
                                             </p>
                                         </div>
                                     </div>
@@ -696,7 +706,7 @@
                                 </div>
                             </div>
                             <div class="accordion-section">
-                                <h6 class="accordion-title">Массаж общий</h6>
+                                <h6 class="accordion-title">Ароматерапия</h6>
                                 <div class="accordion-content">
 
 
@@ -765,18 +775,18 @@
 
                                     <!-- Welcome Content -->
                                     <div class="col-md-8 mb-30">
-                                        <p class="lead">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur?</p>
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quas.</p>
+                                        <p class="lead">Нежная техника массажа с использованием ароматического масла по Вашему выбору быстро снимет напряжение и наполнит Ваше тело новой энергией.</p>
+
                                     </div>
                                     <!-- End Welcome Content -->
                                     <div class="col-md-4 mb-30">
                                         <div class="project-detail-block">
 
                                             <p>
-                                                <strong class="dark-color">Длительность :</strong>40/50/60 мин.
+                                                <strong class="dark-color">Длительность :</strong>30/60/90 мин
                                             </p>
                                             <p>
-                                                <strong class="dark-color">Стоимость :</strong>700/800/900 руб.
+                                                <strong class="dark-color">Стоимость :</strong>700/800/900 руб
                                             </p>
                                         </div>
                                     </div>
@@ -786,7 +796,7 @@
                                 </div>
                             </div>
                             <div class="accordion-section">
-                                <h6 class="accordion-title">Шведский массаж</h6>
+                                <h6 class="accordion-title">Массаж стоп</h6>
                                 <div class="accordion-content">
 
 
@@ -855,18 +865,18 @@
 
                                     <!-- Welcome Content -->
                                     <div class="col-md-8 mb-30">
-                                        <p class="lead">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur?</p>
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quas.</p>
+                                        <p class="lead">Благодаря воздействию на энергетические точки, связанные со всеми органами и системами человека, а также искусным движением мастера,
+                                        массаж стоп стимулирует жизненные функции организма, выводятся токсины, улучшается кровообращение, успокаиваются нервы, и Вы начинаете ощущать умиротворение в душе.</p>
                                     </div>
                                     <!-- End Welcome Content -->
                                     <div class="col-md-4 mb-30">
                                         <div class="project-detail-block">
 
                                             <p>
-                                                <strong class="dark-color">Длительность :</strong>40/50/60 мин.
+                                                <strong class="dark-color">Длительность :</strong>30/60 мин
                                             </p>
                                             <p>
-                                                <strong class="dark-color">Стоимость :</strong>700/800/900 руб.
+                                                <strong class="dark-color">Стоимость :</strong>700/800 руб
                                             </p>
                                         </div>
                                     </div>
