--- a/Chili-web/index.html
+++ b/Chili-web/index.html
@@ -35,25 +35,19 @@
     </div>
 </header>
 <div class="limiter white_background clearfix">
-    <div class="float-left faces">
+    <div class="faces float-left">
         <div class="faces__text">
             <p>Lorem ipsum dolor sit amet, et est libris audiam consequuntur,</p>
             <p>no quo civibus officiis ponderum. Tale fugit ludus ius ei.</p>
         </div>
     </div>
-    <div class="float-left">
-        <img class="banner" src="img/banner.jpg" alt="">
-    </div>
+    <img class="banner float-left" src="img/banner.jpg" alt="">
 </div>
-<div class="content limiter white_background clearfix ">
-    <div class="text float-left">
-        Text
-    </div>
-    <div class="float-left top-sales">
-        <p class="top-sales__heading"><span class="yellow_text">Топ</span> продаж</p>
-        <div class="top-sales__block">
-
-        </div>
+<div class="content limiter white_background clearfix">
+    <div class="text float-left">Text</div>
+    <div class="top-sales float-left">
+        <p class="top-sales__heading"><span class="yellow">Топ</span> продаж</p>
+        <div class="top-sales__block"></div>
     </div>
 </div>
 <footer>
