--- a/Chili-web/index.html
+++ b/Chili-web/index.html
@@ -44,7 +44,9 @@
     <img class="banner float-left" src="img/banner.jpg" alt="">
 </div>
 <div class="content limiter white_background clearfix">
-    <div class="text float-left">Text</div>
+    <div class="text float-left">
+        <p>Text</p>
+    </div>
     <div class="top-sales float-left">
         <p class="top-sales__heading"><span class="yellow">Топ</span> продаж</p>
         <div class="top-sales__block"></div>
@@ -54,7 +56,7 @@
     <div class="limiter clearfix">
         <div class="footer__wrapper">
             <div class="float-left">
-                <img class="logo_green" src="img/logo_green.jpg" alt="">
+                <img class="logo_green" src="img/logo-green.jpg" alt="">
                 <div class="copyright">
                     <p>2014 - BIGbomb</p>
                     <p>Рекламно-производительная компания</p>
