--- a/massage/onepage.html
+++ b/massage/onepage.html
@@ -763,46 +763,6 @@
 
                                     <div class="clearfix"></div>
 
-                                    <!-- Welcome Content -->
-                                    <div class="col-md-8 mb-30">
-                                        <p class="lead">Дренажное обертывание</p>
-                                        <p>Описание</p>
-                                    </div>
-                                    <!-- End Welcome Content -->
-                                    <div class="col-md-4 mb-30">
-                                        <div class="project-detail-block">
-
-                                            <p>
-                                                <strong class="dark-color">Длительность :</strong>75 мин.
-                                            </p>
-                                            <p>
-                                                <strong class="dark-color">Стоимость :</strong>800 руб.
-                                            </p>
-                                        </div>
-                                    </div>
-
-                                    <div class="clearfix"></div>
-
-                                    <!-- Welcome Content -->
-                                    <div class="col-md-8 mb-30">
-                                        <p class="lead">Комплексная релаксация тела</p>
-                                        <p>Описание</p>
-                                    </div>
-                                    <!-- End Welcome Content -->
-                                    <div class="col-md-4 mb-30">
-                                        <div class="project-detail-block">
-
-                                            <p>
-                                                <strong class="dark-color">Длительность :</strong>75 мин.
-                                            </p>
-                                            <p>
-                                                <strong class="dark-color">Стоимость :</strong>800 руб.
-                                            </p>
-                                        </div>
-                                    </div>
-
-                                    <div class="clearfix"></div>
-
                                 </div>
                             </div>
                             <!--Уход за телом-->
@@ -1245,6 +1205,98 @@
 
                                 </div>
                             </div>
+                            <!--Кинезиология-->
+                            <div class="accordion-section">
+                                <h6 class="accordion-title">Кинезиология</h6>
+                                <div class="accordion-content">
+
+
+                                    <div class="nf-col-4">
+
+                                        <div class="float-left nf-item branding design coffee">
+                                            <div class="item-box">
+                                                <a class="cbox-gallary1" href="img/portfolio/36.jpg" title="Consequat massa quis">
+                                                    <img class="item-container" src="img/portfolio/36.jpg" alt="1" />
+                                                    <div class="item-mask">
+                                                        <div class="item-caption">
+                                                            <h5 class="white">Consequat massa quis</h5>
+                                                            <p class="white">Branding, Design, Coffee</p>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+
+                                        <div class="float-left nf-item branding design coffee">
+                                            <div class="item-box">
+                                                <a class="cbox-gallary1" href="img/portfolio/50.jpg" title="Consequat massa quis">
+                                                    <img class="item-container" src="img/portfolio/50.jpg" alt="1" />
+                                                    <div class="item-mask">
+                                                        <div class="item-caption">
+                                                            <h5 class="white">Consequat massa quis</h5>
+                                                            <p class="white">Branding, Design, Coffee</p>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+
+                                        <div class="float-left nf-item photo">
+                                            <div class="item-box">
+                                                <a class="cbox-gallary1" href="img/portfolio/49.jpg" title="Vivamus elementum semper">
+                                                    <img class="item-container" src="img/portfolio/49.jpg" alt="2" />
+                                                    <div class="item-mask">
+                                                        <div class="item-caption">
+                                                            <h5 class="white">Vivamus elementum semper</h5>
+                                                            <p class="white">Photo</p>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+
+                                        <div class="float-left nf-item branding design coffee">
+                                            <div class="item-box">
+                                                <a class="cbox-gallary1" href="img/portfolio/48.jpg" title="Quisque rutrum">
+                                                    <img class="item-container" src="img/portfolio/48.jpg" alt="4" />
+                                                    <div class="item-mask">
+                                                        <div class="item-caption">
+                                                            <h5 class="white">Quisque rutrum</h5>
+                                                            <p class="white">Branding, Design, Coffee</p>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <div class="clearfix"></div>
+
+                                    <div class="spacer-30"></div>
+
+                                    <!-- Welcome Content -->
+                                    <div class="col-md-8 mb-30">
+                                        <p class="lead">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur?</p>
+                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quas.</p>
+                                    </div>
+                                    <!-- End Welcome Content -->
+                                    <div class="col-md-4 mb-30">
+                                        <div class="project-detail-block">
+
+                                            <p>
+                                                <strong class="dark-color">Длительность :</strong>40/50/60 мин.
+                                            </p>
+                                            <p>
+                                                <strong class="dark-color">Стоимость :</strong>700/800/900 руб.
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="clearfix"></div>
+
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
