--- a/massage/onepage.html
+++ b/massage/onepage.html
@@ -41,44 +41,12 @@
     </section>
     <!-- End Preloader -->
 
-    <!--&lt;!&ndash; Sidemenu &ndash;&gt;-->
-    <!--<section id="pushmenu-right" class="pushmenu pushmenu-right side-menu">-->
-        <!--<a id="menu-sidebar-close-icon" class="menu-close"><i class="ion ion-android-close"></i></a>-->
-        <!--<ul>-->
-            <!--<li><a class="all-demos-link" target="_blank" href="../demo.html">Main Demo Page</a></li>-->
-            <!--<li><a href="home.html">Home Default</a></li>-->
-            <!--<li><a href="portfolio-grid-2col.html">Portfolio</a></li>-->
-            <!--<li><a href="login-register.html">Login & Signup</a></li>-->
-            <!--<li><a href="faq-1.html">FAQ</a></li>-->
-            <!--<li><a href="about-1.html">About</a></li>-->
-            <!--<li><a href="service-1.html">Service</a></li>-->
-            <!--<li><a href="blog-grid-3col.html">Blog</a></li>-->
-            <!--<li><a href="404-error-1.html">404 Error</a></li>-->
-            <!--<li><a href="shop-checkout.html">Shopping Cart</a></li>-->
-            <!--<li><a href="contact-1.html">Contact Us</a></li>-->
-        <!--</ul>-->
-    <!--</section>-->
-    <!--&lt;!&ndash;End Sidemenu &ndash;&gt;-->
-
     <!-- Site Wraper -->
     <div class="wrapper">
 
         <!-- HEADER -->
         <header id="header" class="header">
             <div class="container">
-
-
-                <!--&lt;!&ndash; Rightside Menu (Search, Cart, Bart icon) &ndash;&gt;-->
-                <!--<div class="side-menu-btn">-->
-                    <!--<ul>-->
-                        <!--&lt;!&ndash;Sidebar Menu Icon&ndash;&gt;-->
-                        <!--<li class="">-->
-                            <!--<a id="menu-sidebar-list-icon" class="nav-bar-icon"><span></span></a>-->
-                        <!--</li>-->
-                        <!--&lt;!&ndash; End Sidebar Menu Icon&ndash;&gt;-->
-                    <!--</ul>-->
-                <!--</div>-->
-                <!--&lt;!&ndash; End Rightside Menu &ndash;&gt;-->
 
                 <!-- Navbar Navigation -->
                 <div class="nav-menu singlepage-nav">
@@ -228,17 +196,19 @@
         <!-- Sidebar Section -->
         <section id="service" class="ptb ptb-sm-80">
             <div class="container ">
-
                 <div class="row">
-
                     <div >
-                        <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                        <p class="lead">Массаж, для меня - это не просто способ расслабить или размять мышцы, а возможность снять боль, восстановить ослабленный организм, придать тонус коже и мышцам.
+                            Это последовательная, скурпулезная и ответственная работа с телом человека как с одним целым.</p>
                         <br />
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                        <p>Я -  профессиональный спортсмен, мастер спорта по дзюдо, чемпион кубка Европы и призёр России, после окончания спортивной карьеры посвятил себя массажу.</p>
                         <br />
-                        <p class="lead dark">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                        <p class="lead dark"> Опыта набирался еще у своей бабушки, проводя большую часть своего детства в её кабинете и наблюдая за движением её рук. Любовь к работе и желание помогать людям я впитал именно от нее.
+                            Один случай потряс меня и определил мою судьбу. В кабинет зашёл согнутый пополам старик, а вышел здоровый мужчина с прямой спиной. Сейчас-то я знаю, что такое приступ ревматизма
+                            и как его снять, но тогда это выглядело как чудо.  Из года в год в санаторий приезжали люди из разных городов, чтобы попасть на массаж к моей бабушке.</p>
                         <br />
-                        <p class="dark">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                        <p class="dark">Сейчас ко мне обращаются люди с разными вопросами: кто-то хочет похудеть, кто-то снять спазм или боль, выровнять спину и укрепить мышцы, а кто-то просто хочет
+                            дать своему телу отдых и легкий расслабляющий массаж как нельзя больше для этого подходит.</p>
                     </div>
                 </div>
 
@@ -2111,7 +2081,6 @@
                             <div class="accordion-section">
                                 <h6 class="accordion-title">Кинезиология</h6>
                                 <div class="accordion-content">
-
 
                                     <div class="nf-col-4">
 
@@ -5691,6 +5660,7 @@
                                                 </div>
                                                 <!-- Accordian2 -->
                                             </div>
+
                                         </div>
                                     </div>
 
