--- a/massage/onepage.html
+++ b/massage/onepage.html
@@ -98,7 +98,7 @@
                                 <div class="intro-content">
                                     <div class="intro-content-inner">
                                         <h2 class="h2">Александр Жерновой</h2>
-                                        <p class="lead">Массажист-кинезиолог от Бога</p>
+                                        <p class="lead">Массажист-кинезиолог</p>
                                     </div>
                                 </div>
                             </div>
