--- a/massage/onepage.html
+++ b/massage/onepage.html
@@ -176,11 +176,10 @@
                             Кроме того, в своей работе я использую техники прикладной кинезиологии и лёгкие мануальные техники. Я люблю свою работу и всегда стараюсь
                             правильно провести диагностику, найти проблему, выявить её причину и предложить решение. Мануально-мышечное воздействие на организм - это
                             лишь небольшая часть на пути к полному восстановлению. После массажа я даю рекомендации для самостоятельной работы со своим телом. Это может
-                            быть комплекс упражнений или режим питания. Я в прошлом - профессиональный спортсмен, поэтому убеждён, что физические нагрузки необходимы
+                            быть комплекс упражнений или режим питания. В прошлом я - профессиональный спортсмен, поэтому убеждён, что физические нагрузки необходимы
                             для поддержания организма в отличной форме. А вообще, мой совет прост - слушайте своё тело, не боритесь с болью, а договаривайтесь с ней,
-                            не переедайте, занимайтесь умственным и физическим трудом.</p>
+                            не переедайте, занимайтесь умственным и физическим трудом, и будете здоровы.</p>
                     </div>
-
                 </div>
             </div>
             <div class="container">
