--- a/massage/onepage.html
+++ b/massage/onepage.html
@@ -24,10 +24,7 @@
     <link href="css/jquery-ui.css" rel="stylesheet" type="text/css" />
     <link href="../02_mazel_onepage/css/linea_icon_font.css" rel="stylesheet" type="text/css" />
 
-
-
     <!-- Js -->
-
 
 </head>
 
@@ -47,7 +44,6 @@
         <!-- HEADER -->
         <header id="header" class="header">
             <div class="container">
-
                 <!-- Navbar Navigation -->
                 <div class="nav-menu singlepage-nav">
                     <ul class="nav-menu-inner">
@@ -58,11 +54,6 @@
                         <li>
                             <a class="" href="#about">Обо мне</a>
                         </li>
-
-                        <!--<li>-->
-                            <!--<a class="" href="#service">Услуги</a>-->
-
-                        <!--</li>-->
                         <li>
                             <a class="" href="#work">Фотогаллерея</a>
 
@@ -71,14 +62,12 @@
                             <a class="" href="#shop">Массажное меню</a>
 
                         </li>
-
                         <li>
                             <a class="" href="#contact-section">Контакты</a>
                         </li>
                     </ul>
                 </div>
                 <!-- End Navbar Navigation -->
-
             </div>
         </header>
         <!-- END HEADER -->
@@ -1240,8 +1229,8 @@
                                 502, DieSachbearbeiter, Schönhauser Allee,<br />
                                 167c10435 Berlin,Germany.
                             </p>
-                            <a href="mailto:yourname@domain.com"><i class="fa fa-envelope-o left"></i>yourname@domain.com</a><br />
-                            <a><i class="fa fa-phone left"></i>+40 (0) 012 345 6789</a>
+                            <a href="mailto:yourname@domain.com"><i class="fa fa-envelope-o left"></i>info@massashka.ru</a><br />
+                            <a><i class="fa fa-phone left"></i>+8 (918) 918-23-32‬</a>
                         </div>
                         <div class="contact-box-left mb-45">
                             <div class="contact-icon-left"><i class="ion ion-ios-clock"></i></div>
