--- a/Chili-web/index.html
+++ b/Chili-web/index.html
@@ -45,7 +45,7 @@
 </div>
 <div class="content limiter white_background clearfix">
     <div class="text float-left">
-        <p>Text</p>
+        <p>Lorem ipsum dolor sit amet, et est libris audiam consequuntur</p>
     </div>
     <div class="top-sales float-left">
         <p class="top-sales__heading"><span class="yellow">Топ</span> продаж</p>
