--- a/massage/onepage.html
+++ b/massage/onepage.html
@@ -1243,7 +1243,7 @@
                             <h6>Адресс</h6>
                             <p>
                                 502, DieSachbearbeiter, Schönhauser Allee,<br />
-                                167c10435 Berlin,Germany.
+                                167c10435 Сочи,Germany.
                             </p>
                             <a href="mailto:yourname@domain.com"><i class="fa fa-envelope-o left"></i>info@massashka.ru</a><br />
                             <a><i class="fa fa-phone left"></i>+8 (918) 918-23-32‬</a>
