--- a/massage/onepage.html
+++ b/massage/onepage.html
@@ -1240,10 +1240,10 @@
                     <div class="col-md-5 contact">
                         <div class="contact-box-left mb-45">
                             <div class="contact-icon-left"><i class="ion ion-ios-location"></i></div>
-                            <h6>Адресс</h6>
+                            <h6>Адрес</h6>
                             <p>
                                 502, DieSachbearbeiter, Schönhauser Allee,<br />
-                                167c10435 Сочи,Germany.
+                                00000 Киев, Украина.
                             </p>
                             <a href="mailto:yourname@domain.com"><i class="fa fa-envelope-o left"></i>info@massashka.ru</a><br />
                             <a><i class="fa fa-phone left"></i>+8 (918) 918-23-32‬</a>
