--- a/massage/onepage.html
+++ b/massage/onepage.html
@@ -1250,7 +1250,7 @@
                         </div>
                         <div class="contact-box-left mb-45">
                             <div class="contact-icon-left"><i class="ion ion-ios-clock"></i></div>
-                            <h6>Рабочее время</h6>
+                            <h6 class="footer2">Рабочее время</h6>
                             <p>
                                 <span>Mon - Fri: 9am to 6pm</span>
                                 <br />
