--- a/massage/onepage.html
+++ b/massage/onepage.html
@@ -39,7 +39,7 @@
     <!-- End Preloader -->
 
     <!-- Site Wraper -->
-    <div class="wrapper">
+    <div class="wrapper f5">
 
         <!-- HEADER -->
         <header id="header" class="header">
