--- a/massage/onepage.html
+++ b/massage/onepage.html
@@ -1241,8 +1241,8 @@
                             <div class="contact-icon-left"><i class="ion ion-ios-location"></i></div>
                             <h6>Адрес</h6>
                             <p>
-                                502, DieSachbearbeiter, Schönhauser Allee,<br />
-                                00000 Киев, Украина.
+                                5023, DieSachbearbeiter, Schönhauser Allee,<br />
+                                0000 Berlin, Germany.
                             </p>
                             <a href="mailto:yourname@domain.com"><i class="fa fa-envelope-o left"></i>info@massashka.ru</a><br />
                             <a><i class="fa fa-phone left"></i>+8 (918) 918-23-32‬</a>
