--- a/massage/onepage.html
+++ b/massage/onepage.html
@@ -52,9 +52,6 @@
                         <li>
                             <a class="" href="#about">Обо мне</a>
                         </li>
-                        <!--<li>-->
-                            <!--<a class="" href="#about2">Сертификаты</a>-->
-                        <!--</li>-->
                         <li>
                             <a class="" href="#work">Фотогаллерея</a>
                         </li>
@@ -92,7 +89,6 @@
                                             <a class="btn btn-md btn-black-line" href="#about">Обо мне</a><span class="btn-space-10 xs-hidden"></span>
                                             <!--<a class="btn btn-md btn-black-line" href="#about2">Сертификаты</a><span class="btn-space-10 xs-hidden"></span>-->
                                             <a class="btn btn-md btn-black xs-hidden" href="#work">Фотогаллерея</a>
-
                                         </div>
                                     </div>
                                 </div>
@@ -107,7 +103,7 @@
                                 <div class="intro-content">
                                     <div class="intro-content-inner">
                                         <h2 class="h2">Массаж лица</h2>
-                                        <p class="lead">Помогает коже дольше оставаться молодой, здоровой и подтянутой.</p>
+                                        <p class="lead">Помогает коже дольше оставаться молодой, здоровой и подтянутой</p>
                                         <br />
                                         <div class="singlepage-nav">
                                             <a class="btn btn-md btn-white-line xs-hidden" href="#a6">Детальнее</a><span class="btn-space-10 xs-hidden"></span>
@@ -140,7 +136,7 @@
 
                     <!--Slide-->
                     <li data-slide="dark-slide">
-                        <div class="slide-bg-image overlay-dark dark-bg parallax parallax-section1" data-background-img="img/full/42.jpg">
+                        <div class="slide-bg-image overlay-dark dark-bg parallax parallax-section1" data-background-img="img/full/72.jpg">
                             <div class="js-Slide-fullscreen-height container">
                                 <div class="intro-content">
                                     <div class="intro-content-inner">
@@ -187,16 +183,7 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- End About Section-->
-
-        <hr/>
-
-        <!-- Certificates -->
-        <section id="about2" class="wow ptb fadeIn ptb-sm-80">
             <div class="container">
-                <div class="spacer-15"></div>
-                <h3 class="text-center">Сертификаты</h3>
                 <div class="spacer-30"></div>
                 <div class="row">
                     <div class="owl-carousel item3-carousel nf-carousel-theme o-flow-hidden">
@@ -248,7 +235,7 @@
                 </div>
             </div>
         </section>
-        <!-- End Certificates -->
+        <!-- End About Section-->
 
         <hr/>
 
@@ -289,7 +276,7 @@
         <!-- End Image Slider-->
 
         <!-- Testimonials -->
-        <section id="testimonial" class="overlay-dark80 dark-bg ptb ptb-sm-80" style="background-image: url('img/full/66.jpg');" data-stellar-background-ratio="0.2">
+        <section id="testimonial" class="overlay-dark80 dark-bg ptb ptb-sm-80" style="background-image: url('img/full/58.jpg');" data-stellar-background-ratio="0.2">
             <div class="container">
                 <div class="owl-carousel testimonial-carousel nf-carousel-theme white">
                     <div class="item">
@@ -348,10 +335,9 @@
                 <div class="spacer-60"></div>
                 <div class="row">
                     <!-- Accordian1 -->
-                    <div class="">
-                        <div class="accordion">
-                            <!--Рефлекторно-артикуляционный массаж-->
-                            <div id="a2" class="accordion-section">
+                    <div class="accordion">
+                        <!--Рефлекторно-артикуляционный массаж-->
+                        <div id="a2" class="accordion-section">
                                 <h6 class="accordion-title">Рефлекторно-артикуляционный массаж</h6>
                                 <div class="accordion-content">
                                     <p class="lead">Для всех типов кожи</p>
@@ -390,8 +376,8 @@
                                     </p>
                                 </div>
                             </div>
-                            <!--Спортивный массаж-->
-                            <div id="a3" class="accordion-section">
+                        <!--Спортивный массаж-->
+                        <div id="a3" class="accordion-section">
                                 <h6 class="accordion-title">Спортивный массаж</h6>
                                 <div class="accordion-content">
                                     <p>Это методика массажа, разработанная специально для спортсменов с целью подготовки их к тренировкам и соревнованиям,
@@ -404,8 +390,8 @@
                                     </p>
                                 </div>
                             </div>
-                            <!--Антицеллюлитный массаж-->
-                            <div id="a4" class="accordion-section">
+                        <!--Антицеллюлитный массаж-->
+                        <div id="a4" class="accordion-section">
                                 <h6 class="accordion-title">Антицеллюлитный массаж</h6>
                                 <div class="accordion-content">
                                     <p>Лимфодренажный массаж, воздействующий на проблемные зоны, с использованием специального антицеллюлитного масла,
@@ -418,8 +404,8 @@
                                     </p>
                                 </div>
                             </div>
-                            <!--Висцеральный массаж-->
-                            <div id="a5" class="accordion-section">
+                        <!--Висцеральный массаж-->
+                        <div id="a5" class="accordion-section">
                                 <h6 class="accordion-title">Висцеральный массаж</h6>
                                 <div class="accordion-content">
                                     <p class="lead">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur?</p>
@@ -432,8 +418,8 @@
                                     </p>
                                 </div>
                             </div>
-                            <!--Шведский массаж-->
-                            <div id="a6" class="accordion-section">
+                        <!--Шведский массаж-->
+                        <div id="a6" class="accordion-section">
                                 <h6 class="accordion-title">Шведский массаж</h6>
                                 <div class="accordion-content">
                                     <p>Классический, расслабляющий массаж. Благодаря комбинации классических приемов, этот массаж снимает болевые ощущения
@@ -446,8 +432,8 @@
                                     </p>
                                 </div>
                             </div>
-                            <!--Массаж лица-->
-                            <div class="accordion-section">
+                        <!--Массаж лица-->
+                        <div class="accordion-section">
                                 <h6 class="accordion-title">Массаж лица</h6>
                                 <div class="accordion-content">
                                     <p class="lead">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur?</p>
@@ -460,7 +446,6 @@
                                     </p>
                                 </div>
                             </div>
-                        </div>
                     </div>
                     <!-- Accordian2 -->
                 </div>
